--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,5 +32,6 @@
       <a href="./about-me.html" target="_blank">关于我</a>
     </div>
     <p id="clock">当前时间加载中... ...</p>
+    <p id="motto">每日一句加载中... ...</p>
   </body>
 </html>
